<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

                    <FrameLayout
                        android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:adjustViewBounds="true"
                            android:scaleType="fitXY"
                            android:src="@drawable/gambar1" />

                        <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:textColor="@android:color/white"
                        android:layout_gravity="bottom"
                        android:layout_marginStart="16dp"
                        android:layout_marginBottom="16dp"
                        android:layout_marginLeft="16dp"
                        android:background="#4D000000"
                        android:drawablePadding="4dp"
                        android:gravity="center_vertical"
                        android:padding="8dp"
                        android:text="@string/foto"
                        android:drawableStart="@drawable/ic_baseline_image_24"
                        android:drawableEnd="@drawable/ic_baseline_image_24"
                        android:drawableLeft="@drawable/ic_baseline_image_24"
                        android:drawableRight="@drawable/ic_baseline_image_24" />
                    </FrameLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="8dp"
                        android:text="@string/text2"
                        android:textSize="32sp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:layout_marginBottom="16dp"
                        android:text="@string/text1"/>
                    <TableLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:layout_marginBottom="16dp">

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="8dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:textSize="14sp"
                                android:layout_marginEnd="16dp"
                                android:text="@string/text3"
                                android:layout_marginRight="16dp" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textSize="14sp"
                                android:layout_weight="1"
                                android:text="@string/text4"/>
                        </TableRow>

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="8dp">

                            <TextView android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_marginBottom="8dp"
                                android:textSize="14sp"
                                android:text="@string/text5"/>

                            <TextView android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="8dp"
                                android:textSize="14sp"
                                android:layout_weight="1"
                                android:text="@string/text5"/>

                        </TableRow>

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="8dp">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="16dp"
                                android:textSize="14sp"
                                android:layout_marginRight="16dp"
                                android:text="@string/text6"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_marginEnd="16dp"
                                android:textSize="14sp"
                                android:layout_weight="1"
                                android:layout_marginRight="16dp"
                                android:text="@string/text6"/>
                        </TableRow>
                    </TableLayout>
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:layout_marginBottom="16dp">

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/profile_image"
                            android:layout_width="56dp"
                            android:layout_height="56dp"
                            android:layout_centerVertical="true"
                            android:layout_marginEnd="16dp"
                            android:layout_marginRight="16dp"
                            android:src="@drawable/pasfoto" />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_toEndOf="@id/profile_image"
                            android:layout_toRightOf="@id/profile_image"
                            android:text="@string/text7"/>
                    </RelativeLayout>
                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:layout_marginBottom="16dp"
                        android:text="tag"
                        android:id="@+id/tag"/>
                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:layout_marginBottom="16dp"
                        android:text="@string/masuk"
                        android:id="@+id/masuk"/>

    </LinearLayout>

</ScrollView>